--- a/app/src/main/res/layout/fragment_league_list.xml
+++ b/app/src/main/res/layout/fragment_league_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="16dp"
         tools:listitem="@layout/item_league_list">
 
     </androidx.recyclerview.widget.RecyclerView>
