--- a/app/src/main/res/layout/item_league_list.xml
+++ b/app/src/main/res/layout/item_league_list.xml
@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingStart="16dp"
-    android:paddingTop="16dp"
-    android:paddingEnd="16dp">
+    android:paddingTop="8dp">
 
 
     <ImageView
