--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -28,7 +29,6 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary" />
 
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
@@ -36,36 +36,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    <!--    <androidx.recyclerview.widget.RecyclerView-->
-    <!--        android:id="@+id/recyclerView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        tools:listitem="@layout/item_league_list">-->
-
-    <!--    </androidx.recyclerview.widget.RecyclerView>-->
-
-    <!--    <FrameLayout-->
-    <!--        android:id="@+id/loading_overlay"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="center"-->
-    <!--        android:visibility="gone">-->
-
-    <!--        <View-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:background="#CD000000"-->
-    <!--            android:clickable="true"-->
-    <!--            android:focusable="true" />-->
-
-    <!--        <ProgressBar-->
-    <!--            android:layout_width="100dp"-->
-    <!--            android:layout_height="100dp"-->
-    <!--            android:layout_gravity="center"-->
-    <!--            android:max="100"-->
-    <!--            android:progress="0" />-->
-    <!--    </FrameLayout>-->
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
